tests/e2e/snapshots/e2e__audit__codex_block_raw_tcp_egress.snap
---
source: crates/firma/../../tests/e2e/audit.rs
expression: self
---
FirmaAuditTrail(
    {
        AuditEvent {
            action: "code.read",
            resource: "api.github.com/repos/openai/plugins",
            decision: Allow,
            deny_reason: "",
            dispatch_status: 200,
        },
        AuditEvent {
            action: "code.read",
            resource: "api.github.com/repos/openai/plugins/git/ref/heads/main",
            decision: Allow,
            deny_reason: "",
            dispatch_status: 200,
        },
        AuditEvent {
            action: "code.write",
            resource: "github.com/",
            decision: Allow,
            deny_reason: "",
            dispatch_status: 200,
        },
    },
)
