tests/e2e/snapshots/e2e__audit__codex_deny_forbidden_http_resource.snap
---
source: crates/firma/../../tests/e2e/audit.rs
expression: self
---
FirmaAuditTrail(
    {
        AuditEvent {
            action: "code.read",
            resource: "api.github.com/repos/openai/plugins",
            decision: Allow,
            deny_reason: "",
            dispatch_status: 200,
        },
        AuditEvent {
            action: "code.read",
            resource: "api.github.com/repos/openai/plugins/git/ref/heads/main",
            decision: Allow,
            deny_reason: "",
            dispatch_status: 200,
        },
        AuditEvent {
            action: "code.write",
            resource: "github.com/",
            decision: Allow,
            deny_reason: "",
            dispatch_status: 200,
        },
        AuditEvent {
            action: "communication.external.send",
            resource: "127.0.0.1:<mock-port>/paste",
            decision: Deny,
            deny_reason: "policy denied: policy denied action 'communication.external.send' on resource '127.0.0.1:<mock-port>/paste'",
            dispatch_status: 0,
        },
    },
)
