tests/e2e/snapshots/e2e__audit__codex_deny_unclassified_intent.snap
---
source: crates/firma/../../tests/e2e/audit.rs
expression: self
---
FirmaAuditTrail(
    {
        AuditEvent {
            action: "network.connect",
            resource: "github.com/",
            decision: Deny,
            deny_reason: "token invalid: no capability token covers action 'code.write' on resource 'github.com/'",
            dispatch_status: 0,
        },
        AuditEvent {
            action: "raw.http.GET",
            resource: "api.github.com/repos/openai/plugins",
            decision: Deny,
            deny_reason: "token invalid: no capability token covers action 'code.read' on resource 'api.github.com/repos/openai/plugins'",
            dispatch_status: 0,
        },
        AuditEvent {
            action: "raw.http.GET",
            resource: "unmapped.test:<mock-port>/unlisted",
            decision: Deny,
            deny_reason: "unclassified intent: protected action could not be classified: GET /unlisted (host: unmapped.test:<mock-port>)",
            dispatch_status: 0,
        },
    },
)
