tests/e2e/snapshots/e2e__audit__codex_simple_prompt.snap
---
source: crates/firma/../../tests/e2e/audit.rs
expression: self
---
FirmaAuditTrail(
    {
        AuditEvent {
            action: "network.connect",
            resource: "github.com/",
            decision: Deny,
            deny_reason: "token invalid: no capability token covers action 'code.write' on resource 'github.com/'",
            dispatch_status: 0,
        },
        AuditEvent {
            action: "raw.http.GET",
            resource: "api.github.com/repos/openai/plugins",
            decision: Deny,
            deny_reason: "token invalid: no capability token covers action 'code.read' on resource 'api.github.com/repos/openai/plugins'",
            dispatch_status: 0,
        },
    },
)
